2010-05-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: fixed
	  little selection drawing issue.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Fix text alignment.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Track API.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Use new BounceFadePopupWindow class.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  some drawing issues.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs:
	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  Worked on message bubble popups

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs:
	  Corrected some minor drawing issues.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Clip
	  selection region.

2010-05-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs:
	* MonoDevelop.SourceEditor/MessageBubbleHighlightPopupWindow.cs:
	  The message bubbles can now draw selected regions.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Removed debug
	  code.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Ensures
	  that the layout is created.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  some issues with message bubbles.

2010-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: